--- a/client/index.html
+++ b/client/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Nerif</title>
-	<meta charset="UTF-8">
+    <title>Nerif</title>
+    <meta charset="UTF-8">
 
-	<script type="text/javascript" src="ext-6.2.0/build/ext-all.js"></script>
+    <script type="text/javascript" src="ext-6.2.0/build/ext-all.js"></script>
 
-	<script type="text/javascript" src="ext-6.2.0/build/classic/theme-triton/theme-triton.js"></script>
-	<link rel="stylesheet" type="text/css" href="ext-6.2.0/build/classic/theme-triton/resources/theme-triton-all.css">
+    <script type="text/javascript" src="ext-6.2.0/build/classic/theme-triton/theme-triton.js"></script>
+    <link rel="stylesheet" type="text/css" href="ext-6.2.0/build/classic/theme-triton/resources/theme-triton-all.css">
 
-	<script type="text/javascript" src="app/view/Geral.js"></script>
+    <script type="text/javascript" src="app/util/Nerif.js"></script>
 </head>
 <body>
-<script type="text/javascript">
-	Ext.application({
-		extend: 'Ext.app.Application',
-		name: 'Nerif',
-		autoCreateViewport: 'Nerif.view.Main'
-	});
-</script>
+    <script type="text/javascript">
+        Ext.application({
+            extend: 'Ext.app.Application',
+            name: 'Nerif',
+            autoCreateViewport: 'Nerif.view.Main',
+            requires: ['Nerif.component.Gerenciador']
+        });
+    </script>
 </body>
 </html>
