--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
 
     <script type="text/javascript" src="ext-6.2.0/build/classic/theme-triton/theme-triton.js"></script>
     <link rel="stylesheet" type="text/css" href="ext-6.2.0/build/classic/theme-triton/resources/theme-triton-all.css">
+    
+    <link rel="stylesheet" type="text/css" href="resources/css/Nerif.css">
 </head>
 <body>
     <script type="text/javascript">
