--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,15 @@
 <head>
     <title>Nerif</title>
     <meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <script type="text/javascript" src="ext-6.2.0/build/ext-all.js"></script>
 
     <script type="text/javascript" src="ext-6.2.0/build/classic/theme-triton/theme-triton.js"></script>
     <link rel="stylesheet" type="text/css" href="ext-6.2.0/build/classic/theme-triton/resources/theme-triton-all.css">
+    
+    <script type="text/javascript" src="ext-6.2.0/build/packages/charts/classic/charts.js"></script>
+    <link rel="stylesheet" type="text/css" href="ext-6.2.0/build/packages/charts/classic/triton/resources/charts-all.css">
     
     <link rel="stylesheet" type="text/css" href="resources/css/Nerif.css">
 </head>
